# demetra

./: .coderabbit.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  create_fake_history.py  heading  main.py  opencode.json  pyproject.toml
.github/workflows/: checks.yml
.zed/: debug.json
chimera/: __init__.py  settings.py
chimera/models/: context.py
chimera/services/: coderabbit.py  filesystem.py  git.py  graphql.py  linear.py  models.py  opencode.py  prompt.py  utils.py
chimera/services/queries/: get_todo_issues.gql
demetra/: exceptions.py  models.py  settings.py
demetra/services/: coderabbit.py  cursor.py  database.py  filesystem.py  flow.py  git.py  github.py  graphql.py  linear.py  lint.py  opencode.py  precommit.py  subprocess.py  test.py  tui.py  utils.py
demetra/services/queries/: create_issue_comment.gql  get_todo_issues.gql  list_states.gql  update_issue_status.gql
tests/: test_cursor.py  test_database.py  test_filesystem.py  test_flow.py  test_git.py  test_github.py  test_graphql.py  test_integration.py  test_linear.py  test_lint.py  test_models.py  test_opencode.py  test_precommit.py  test_settings.py  test_subprocess.py  test_test.py  test_utils.py  test_workflow_integration.py
